<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="file_operation">文件操作</string>
    <string name="notification_and_push">通知与推送</string>
    <string name="exit_radio">退出电台</string>
    <string name="exit_account">退出当前账号</string>
    <string name="from_photo_choice">从相册选择</string>
    <string name="from_camera_choice">从相机选择</string>
    <string name="file_in_or_out_Storage">内外置存储路径</string>
    <string name="file_path">文件夹路径：</string>
    <string name="file_delete">删除</string>
    <string name="file_mkdir">创建文件夹</string>
    <string name="file_directory">获取路径</string>
    <string name="start_animator">旋转</string>
    <string name="start_animator2">收缩与透明</string>
    <string name="start_animatot3">自由落体与抛物</string>
    <string name="send">发送</string>
    
    <!-- 通信录 -->
    <string name="address_book">
        	建阳朔,奉晓枫,剑代卉,宣宏伯,赵醉柳,司马高邈,仝雪卉,陈天工,储琨瑶,诸碧琴,
        	凭青枫,曹鸿禧,区嘉音,倪亦巧,隐慧云,季修竹,机白夏,贰思聪,铁盼波,东门天骄,
        	曲易巧,扈骊泓,钞凯定,绳向阳,宗任真,帖文心,受秋巧,革思博,盍傲安,居涵菡
   </string>

</resources>