<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/animator_iv"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_centerInParent="true"
        android:src="@drawable/app_logo" />
    <ImageView
        android:id="@+id/animator_iv2"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/collect_red" />
    <ImageView
        android:id="@+id/animator_iv3"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/collect_red" />

    <LinearLayout
        android:id="@+id/animator_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/animator_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_animator" />

        <Button
            android:id="@+id/animator_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_animator2" />
        <Button
            android:id="@+id/animator_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_animatot3" />
    </LinearLayout>

    <TextView
        android:id="@+id/animator_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/animator_ll"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/action_settings" />

</RelativeLayout>