<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/file_tv_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_path"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ff3333" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/file_btn_in_or_out_Storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_in_or_out_Storage" />

            <TextView
                android:id="@+id/file_tv_in_or_out_Storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/file_btn_in_or_out_Storage"
                android:text="@string/file_in_or_out_Storage"
                android:textSize="17sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ff3333" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/file_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_delete" />

            <TextView
                android:id="@+id/file_tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/file_btn_delete"
                android:text="@string/file_delete"
                android:textSize="17sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ff3333" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/file_btn_mkdir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_mkdir" />

            <TextView
                android:id="@+id/file_tv_mkdir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/file_btn_mkdir"
                android:text="@string/file_mkdir"
                android:textSize="17sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ff3333" />
        
        <Button
                android:id="@+id/file_btn_directory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_directory" />

            <TextView
                android:id="@+id/file_tv_directory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/file_btn_mkdir"
                android:text="@string/file_directory"/>
        
        
    </LinearLayout>

</ScrollView>